More JPMS opening of limits; roll back OSGi upgrade